--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "9.1.0",
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.3.1",
+    "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
